user and book router created and model values are displayed

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,6 @@
-{{page-title "Library"}}
-
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-2"><Nav /></div>
+        <div class="col-md-10">{{outlet}}</div>
+    </div>
+</div>
