commit due to lint

--- a/app/components/nav.hbs
+++ b/app/components/nav.hbs
@@ -1,4 +1,4 @@
 <ul>
-  <li><LinkTo @route="index" style="text-decoration:none;">User</LinkTo></li>
-  <li><LinkTo @route="books" style="text-decoration:none;">Books</LinkTo></li>
+  <li><LinkTo @route="index" id="dec">User</LinkTo></li>
+  <li><LinkTo @route="books" id="dec">Books</LinkTo></li>
 </ul>
