--- a/app/components/user-table.hbs
+++ b/app/components/user-table.hbs
@@ -17,12 +17,12 @@
                 <div class="row">
                     <div class="col">
                         <button type="button" class="btn btn-default btn-sm">
-                          <i class='far fa-edit' style='font-size:24px;color:gray'></i>
+                          <i class='far fa-edit'></i>
                         </button>
                     </div>
                     <div class="col">
                         <button type="button" class="btn btn-default btn-sm">
-                           <i class='far fa-trash-alt' style='font-size:24px;color:gray'></i>
+                           <i class='far fa-trash-alt'></i>
                         </button>
                     </div>
                 </div>
