adduser model box added

--- a/app/components/user-table.hbs
+++ b/app/components/user-table.hbs
@@ -1,6 +1,7 @@
 <table class="table table-hover">
   <thead>
     <tr>
+      <th scope="col">ID</th>
       <th scope="col">Name</th>
       <th scope="col">Email</th>
       <th scope="col">Mobile No</th>
@@ -10,13 +11,14 @@
   <tbody>
    {{#each @user as |u|}}
         <tr>
+            <td>{{u.uid}}</td>
             <td>{{u.name}}</td>
             <td>{{u.email}}</td>
             <td>{{u.mobile}}</td>
             <td>
                 <div class="row">
                     <div class="col">
-                        <button type="button" class="btn btn-default btn-sm">
+                        <button type="button" id={{u.uid}} class="btn btn-default btn-sm">
                           <i class='far fa-edit'></i>
                         </button>
                     </div>
