--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,16 @@
 <div class="row">
     <div class="col-md-9"><h3>User List:</h3></div>
-    <div class="col-md-3"><button role="button" class="btn btn-primary" type="button">Add User</button></div>
+    <div class="col-md-3"><button role="button" class="btn btn-primary" type="button" data-toggle="modal" data-target="#myModal">Add User</button></div>
 </div>
 <br><br>
+<div class="modal" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+         <Addmodel @onCreate={{this.addMessage}}/>
+      </div>
+    </div>
+  </div>
+</div>
 
 <UserTable @user={{@model}}/>
