edit dailog box added

--- a/app/components/user-table.hbs
+++ b/app/components/user-table.hbs
@@ -19,7 +19,7 @@
                 <div class="row">
                     <div class="col">
                         <button type="button" id={{u.uid}} class="btn btn-default btn-sm" {{on "click" this.info}}>
-                          <i class='far fa-edit' id={{u.uid}} data-toggle="modal" data-target="#myModal1"></i>
+                          <i class='far fa-edit' data-toggle="modal" data-target="#myModal1"></i>
                         </button>
                         
                     </div>
