--- a/app/components/user-table.hbs
+++ b/app/components/user-table.hbs
@@ -18,14 +18,14 @@
             <td>
                 <div class="row">
                     <div class="col">
-                        <button type="button" id={{u.uid}} class="btn btn-default btn-sm" {{on "click" this.info}}>
-                          <i class='far fa-edit' data-toggle="modal" data-target="#myModal1"></i>
+                        <button type="button"  class="btn btn-default btn-sm" {{on "click" this.info}}>
+                          <i class='far fa-edit' id={{u.uid}}></i>
                         </button>
                         
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-default btn-sm">
-                           <i class='far fa-trash-alt'></i>
+                        <button type="button" class="btn btn-default btn-sm" {{on "click" (fn this.deleted u)}}> <i class='far fa-trash-alt'></i>
+                           {{!-- <i class='far fa-trash-alt'id={{u.uid}} {{on "click" (fn this.toggles true)}}data-toggle="modal" data-target="#myModal2"></i> --}}
                         </button>
                     </div>
                 </div>
@@ -34,21 +34,33 @@
     {{/each}}
   </tbody>
 </table>
+{{#if this.del}}
 <div class="modal" id="myModal1">
 <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-body">
       <form class="form-group">
-          <label>ID:<Input class="form-control" @value={{this.ref}} @type="text"  placeholder="enter the id" /></label><br>
+          <label>ID:<Input class="form-control" @value={{this.uid}} @type="text"  placeholder="enter the id" /></label><br>
           <label>Name:<Input class="form-control" @value={{this.uname}} @type="text" placeholder="enter your name"  /></label><br>
           <label>Email:<Input class="form-control" @value={{this.uemail}} @type="email" placeholder="enter your email"  /></label><br>
           <label>Mobile No:<Input class="form-control"  @value={{this.umobile}} @type="text" placeholder="enter your number"  /></label>
           <div class="modal-footer">
-              <button type="button" class="btn btn-danger" {{on "click" this.update}}>Save</button>
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-danger" {{on "click" this.update}} data-dismiss="modal">Save</button>
+              <button type="button" class="btn btn-danger" {{on "click" (fn this.toggles false)}}data-dismiss="modal">Cancel</button>
           </div>
       </form>
     </div>
   </div>
 </div>
 </div>
+{{/if}}
+{{!-- {{#if this.del}}
+<div class="modal" id="myModal2">
+<div class="modal-dialog">
+  <div class="modal-content">
+    <DeleteModel @id={{this.ref}} @toggles={{this.toggles}}/>
+  </div>
+</div>
+</div>
+{{/if}} --}}
+
